Begin a base for a new icons system